--- a/Detail_/TG_Book_Chap_Cell.xib
+++ b/Detail_/TG_Book_Chap_Cell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,10 +11,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TG_Book_Chap_Cell" id="rnf-ZK-jYO">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="55"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="65"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="HrC-nd-aFK">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="55"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="65"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bj5-bS-kgN">
@@ -22,28 +22,28 @@
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="wM5-SB-0Dl"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <nil key="textColor"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" red="0.46666666666666667" green="0.46666666666666667" blue="0.46666666666666667" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mca-uG-dwz">
-                        <rect key="frame" x="10" y="26" width="260" height="21"/>
+                        <rect key="frame" x="10" y="36" width="260" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="gDM-ud-WZO"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <nil key="textColor"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                        <color key="textColor" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UXA-JI-9tG">
-                        <rect key="frame" x="10" y="54.5" width="300" height="0.5"/>
-                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <rect key="frame" x="0.0" y="64.5" width="320" height="0.5"/>
+                        <color key="backgroundColor" red="0.76862745098039209" green="0.76862745098039209" blue="0.76862745098039209" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="0.5" id="mdO-j5-Gcy"/>
                         </constraints>
                     </view>
-                    <label opaque="NO" userInteractionEnabled="NO" tag="5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3M6-iH-PHI">
-                        <rect key="frame" x="276" y="17" width="42" height="21"/>
+                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" tag="5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3M6-iH-PHI">
+                        <rect key="frame" x="276" y="22" width="42" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="Mxo-p2-1un"/>
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="42" id="cO1-6r-Daf"/>
@@ -52,23 +52,36 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ico_free" translatesAutoresizingMaskIntoConstraints="NO" id="HWr-GU-aKd">
+                        <rect key="frame" x="290" y="0.0" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="8L1-AH-38T"/>
+                            <constraint firstAttribute="width" constant="30" id="jgN-2d-6vE"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
+                <color key="backgroundColor" red="0.92549019610000005" green="0.92941176469999998" blue="0.90588235289999997" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="UXA-JI-9tG" secondAttribute="bottom" id="52n-ry-bx1"/>
                     <constraint firstItem="Bj5-bS-kgN" firstAttribute="top" secondItem="HrC-nd-aFK" secondAttribute="top" constant="5" id="6si-JP-qkI"/>
-                    <constraint firstItem="mca-uG-dwz" firstAttribute="top" secondItem="Bj5-bS-kgN" secondAttribute="bottom" id="79A-vn-SOf"/>
+                    <constraint firstItem="mca-uG-dwz" firstAttribute="top" secondItem="Bj5-bS-kgN" secondAttribute="bottom" constant="10" id="79A-vn-SOf"/>
+                    <constraint firstAttribute="trailing" secondItem="HWr-GU-aKd" secondAttribute="trailing" id="81W-1M-Bei"/>
                     <constraint firstItem="3M6-iH-PHI" firstAttribute="centerY" secondItem="HrC-nd-aFK" secondAttribute="centerY" id="AKs-Uq-dad"/>
-                    <constraint firstAttribute="trailing" secondItem="UXA-JI-9tG" secondAttribute="trailing" constant="10" id="RGI-tD-eSE"/>
+                    <constraint firstItem="HWr-GU-aKd" firstAttribute="top" secondItem="HrC-nd-aFK" secondAttribute="top" id="HN8-Tn-2H1"/>
+                    <constraint firstAttribute="trailing" secondItem="UXA-JI-9tG" secondAttribute="trailing" id="RGI-tD-eSE"/>
                     <constraint firstAttribute="trailing" secondItem="Bj5-bS-kgN" secondAttribute="trailing" constant="50" id="US9-MF-h0Y"/>
                     <constraint firstAttribute="trailing" secondItem="3M6-iH-PHI" secondAttribute="trailing" constant="2" id="bwD-Wf-XQc"/>
                     <constraint firstItem="Bj5-bS-kgN" firstAttribute="leading" secondItem="HrC-nd-aFK" secondAttribute="leading" constant="10" id="dcT-TX-VwL"/>
-                    <constraint firstItem="UXA-JI-9tG" firstAttribute="leading" secondItem="HrC-nd-aFK" secondAttribute="leading" constant="10" id="idl-la-JxJ"/>
+                    <constraint firstItem="UXA-JI-9tG" firstAttribute="leading" secondItem="HrC-nd-aFK" secondAttribute="leading" id="idl-la-JxJ"/>
                     <constraint firstItem="mca-uG-dwz" firstAttribute="leading" secondItem="HrC-nd-aFK" secondAttribute="leading" constant="10" id="oWL-OI-rbF"/>
                     <constraint firstAttribute="trailing" secondItem="mca-uG-dwz" secondAttribute="trailing" constant="50" id="tuw-Db-jbl"/>
                 </constraints>
             </collectionViewCellContentView>
-            <size key="customSize" width="291" height="65"/>
-            <point key="canvasLocation" x="-42.028985507246382" y="-19.084821428571427"/>
+            <size key="customSize" width="291" height="73"/>
+            <point key="canvasLocation" x="-42.028985507246382" y="-16.40625"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="ico_free" width="33" height="33"/>
+    </resources>
 </document>
