--- a/Publisher_/Publisher_Cell_Large.xib
+++ b/Publisher_/Publisher_Cell_Large.xib
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -17,36 +18,37 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4Xv-re-mBO">
-                        <rect key="frame" x="7" y="7" width="150" height="124"/>
+                        <rect key="frame" x="7" y="7" width="124" height="124"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="150" id="cRZ-HD-Cek"/>
+                            <constraint firstAttribute="width" constant="124" id="cRZ-HD-Cek"/>
                             <constraint firstAttribute="height" constant="124" id="jfJ-zA-DyY"/>
                         </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <integer key="value" value="8"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7ZD-Ml-6n4">
-                        <rect key="frame" x="165" y="7" width="144" height="21"/>
+                        <rect key="frame" x="139" y="57.5" width="170" height="24"/>
                         <constraints>
-                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="L8y-Ei-Hxf"/>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="24" id="ajd-ER-NY3"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" red="0.1137254902" green="0.32156862749999998" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Riu-oN-fb0">
-                        <rect key="frame" x="165" y="32" width="144" height="18"/>
-                        <constraints>
-                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="18" id="1DE-Cc-qLz"/>
-                        </constraints>
+                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Riu-oN-fb0">
+                        <rect key="frame" x="139" y="32" width="170" height="18"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="italicSystem" pointSize="19"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <textView clipsSubviews="YES" userInteractionEnabled="NO" tag="22" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="Label" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Seq-gi-UGU">
-                        <rect key="frame" x="160" y="50" width="149" height="81"/>
-                        <constraints>
-                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="81" id="xCc-YI-04R"/>
-                        </constraints>
-                        <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <textView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" tag="22" contentMode="scaleToFill" fixedFrame="YES" scrollEnabled="NO" editable="NO" text="Label" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Seq-gi-UGU">
+                        <rect key="frame" x="134" y="50" width="175" height="81"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="textColor" systemColor="labelColor"/>
                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                     </textView>
@@ -60,23 +62,22 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="Sii-Xn-b4b" secondAttribute="trailing" id="3We-JF-9dl"/>
-                    <constraint firstAttribute="trailing" secondItem="Riu-oN-fb0" secondAttribute="trailing" constant="11" id="BLc-W2-AkB"/>
                     <constraint firstItem="Sii-Xn-b4b" firstAttribute="leading" secondItem="FVj-y0-Yxb" secondAttribute="leading" constant="8" id="HE6-qr-IvK"/>
-                    <constraint firstItem="7ZD-Ml-6n4" firstAttribute="top" secondItem="FVj-y0-Yxb" secondAttribute="top" constant="7" id="KIg-bZ-zwy"/>
+                    <constraint firstItem="Sii-Xn-b4b" firstAttribute="top" secondItem="4Xv-re-mBO" secondAttribute="bottom" constant="7.5" id="Mu5-65-wts"/>
                     <constraint firstAttribute="bottom" secondItem="Sii-Xn-b4b" secondAttribute="bottom" id="P3u-nR-hMB"/>
-                    <constraint firstAttribute="trailing" secondItem="7ZD-Ml-6n4" secondAttribute="trailing" constant="11" id="SPS-Se-Q8j"/>
-                    <constraint firstAttribute="trailing" secondItem="Seq-gi-UGU" secondAttribute="trailing" constant="11" id="XQS-VF-6ER"/>
                     <constraint firstItem="4Xv-re-mBO" firstAttribute="leading" secondItem="FVj-y0-Yxb" secondAttribute="leading" constant="7" id="b2v-fX-tiM"/>
-                    <constraint firstItem="Seq-gi-UGU" firstAttribute="leading" secondItem="4Xv-re-mBO" secondAttribute="trailing" constant="3" id="b5F-lz-VNV"/>
-                    <constraint firstAttribute="bottom" secondItem="Seq-gi-UGU" secondAttribute="bottom" constant="8" id="eYy-Zh-tnK"/>
+                    <constraint firstItem="7ZD-Ml-6n4" firstAttribute="centerY" secondItem="FVj-y0-Yxb" secondAttribute="centerY" id="bVT-Wo-SWi"/>
                     <constraint firstItem="4Xv-re-mBO" firstAttribute="top" secondItem="FVj-y0-Yxb" secondAttribute="top" constant="7" id="hkY-1k-U2V"/>
-                    <constraint firstItem="Seq-gi-UGU" firstAttribute="top" secondItem="Riu-oN-fb0" secondAttribute="bottom" id="mZq-fa-zJt"/>
-                    <constraint firstItem="Riu-oN-fb0" firstAttribute="top" secondItem="7ZD-Ml-6n4" secondAttribute="bottom" constant="4" id="p3w-e4-x2K"/>
-                    <constraint firstItem="Riu-oN-fb0" firstAttribute="leading" secondItem="4Xv-re-mBO" secondAttribute="trailing" constant="8" id="qi5-mV-1Dh"/>
-                    <constraint firstItem="7ZD-Ml-6n4" firstAttribute="leading" secondItem="4Xv-re-mBO" secondAttribute="trailing" constant="8" id="vYw-k6-AWM"/>
+                    <constraint firstItem="7ZD-Ml-6n4" firstAttribute="leading" secondItem="4Xv-re-mBO" secondAttribute="trailing" constant="8" symbolic="YES" id="qPD-65-rDB"/>
+                    <constraint firstAttribute="trailing" secondItem="7ZD-Ml-6n4" secondAttribute="trailing" constant="11" id="tT6-I0-RBd"/>
                 </constraints>
             </tableViewCellContentView>
             <point key="canvasLocation" x="-73.913043478260875" y="21.09375"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
